# tss-mcp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  gc.yaml
src/: eth_pk_gen.py  identity.rs  lib.rs  main.rs  runtime.rs
