[package]
name = "vrs-tss"
version = "0.1.0"
authors = ["Verisense Network"]
edition = "2024"

[[bin]]
name = "vrs-tss"
path = "src/main.rs"

[dependencies]

# tss
tss-sdk = { git = "https://github.com/verisense-network/veritss.git", rev = "0d14030083c8d431960a115d2f7c9de58a648780", package = "tss-sdk" }
# tss-sdk = { path = "../../veritss/tss-sdk" }
libp2p-identity = "0.2.10"
crypto-bigint = "0.6.0"
sp-keystore = { version = "0.40.0", default-features = false }
sp-core = { features = ["serde"], version = "34.0.0", default-features = false }
sha2 = "0.10.8"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
schemars = { version = "1.0" }
parking_lot = "0.12.1"
anyhow = "1.0.70"
tokio = { version = "1.34.0", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
bincode = "1.3"
rand = "0.9"
k256 = "0.13.4"
log = "0.4.20"
sha3 = "0.10.8"
num-bigint = "0.4.1"
num-traits = "0.2.19"
rmcp = { version = "0.4.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
env_logger = "0.11"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

axum = { version = "0.8", features = ["macros"] }
